
Please note that WWW::Mechanize and Test::WWW::Mechanize are no
longer using rt.cpan.org for bug tracking.  They are now being
tracked via Google Code at
http://code.google.com/p/www-mechanize/issues/list

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

NEXT
========================================
[DOCUMENTATION]
Fixed internal links.


1.36        Tue Mar 11 00:52:53 CDT 2008
========================================
[THINGS THAT MAY BREAK YOUR CODE]
The autocheck argument to the constructor is now ON by default.
There are so many new programmers whose ->get() calls fail unchecked
that I'm now putting on the seat belts for them.

[ENHANCEMENTS]
You can now specify not to set up the proxy, if there is one.  The
proxy causes problems for Crypt::SSLeay.  For details see:
http://code.google.com/p/www-mechanize/issues/detail?id=39


1.34        Mon Dec 10 00:30:39 CST 2007
========================================
[FIXES]
Many fixes to make the test suite more portable.


1.32        Tue Oct 30 12:02:17 CDT 2007
========================================
[ENHANCEMENTS]
Added dump methods to mirror mech-dump:
* $mech->dump_images()
* $mech->dump_links()
* $mech->dump_forms()
* $mech->dump_all()

Sanity checks in the WWW::Mechanize::Image constructor.  Every Image
must have a "url" and "tag" field passed in to it.


1.31_02     Thu Oct 25 11:48:29 CDT 2007
========================================
[ENHANCEMENTS]
Added class, class_regex, id and id_regex limiters to find_link()
and find_all_links().  Thanks to Adriano Ferreira.


1.31_01     Mon Sep 17 23:38:03 CDT 2007
========================================
[FIXES]
Mech tests now pass even if your DNS server gives A records for
anything (like OpenDNS).  Thanks, Miyagawa!

Searching for the <base href> is now case-inensitive.  A better
solution would be to actually parse the HTML.

[ENHANCEMENTS]
mech-dump now handles --user and --password arguments for sites